backend/inventory/src/main/k8s/manufacturing-ui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: manufacturing-ui-deployment
  namespace: api
  labels:
    app: manufacturing-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manufacturing-ui
  template:
    metadata:
      labels:
        app: manufacturing-ui
    spec:
      containers:
        - name: manufacturing-ui
          image: localhost:5000/manufacturing-ui
          ports:
            - containerPort: 7001
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 7001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 7001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
