backend/inventory/src/main/k8s/biopro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: api
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8080
    - name: rsocket
      port: 7002
