backend/inventory/src/main/k8s/redpanda-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-console-ingress
  namespace: queue
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: console.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-console-service
                port:
                  number: 8082
